update markdown resume

--- a/簡歷/簡歷寫作.md
+++ b/簡歷/簡歷寫作.md
@@ -27,15 +27,15 @@ https://www.51386.com/jlmb/3715.html
 - 個人情況: 姓名 性別 年齡 學歷 聯繫方式
   ![img_1.png](img_1.png)
 - 技能技能/個人優勢 : 順序
-  * 順序要求：java,jvm,並發編程，集合， 設計模式，數據結構
-  * 框架，ssm
-  * 微服務
-  * 數據庫（關繫型，nosql)
-  * 中間件
-  * 份佈式
-  * nginx,tomcat,CDN,DNS
-  * docker,k8s,
-  * 前端技術
+- 順序要求：java,jvm,並發編程，集合， 設計模式，數據結構
+- 框架，ssm
+- 微服務
+- 數據庫（關繫型，nosql)
+- 中間件
+- 份佈式
+- nginx,tomcat,CDN,DNS
+- docker,k8s,
+- 前端技術
 - 項目
   * 項目描述：
     介紹項目是幹啥的，寫項目模塊
