update markdown resume

--- a/compony-履歷/創輝科技有限公司/01-創輝科技有限公司.md
+++ b/compony-履歷/創輝科技有限公司/01-創輝科技有限公司.md
@@ -5,8 +5,11 @@
 https://www.cakeresume.com/companies/cakeresume-Chuanghui/jobs/senior-java-software-development-engineer-a7af0c
 工作待遇： 月薪 7萬 至 15萬元
 
-工作內容
-工作說明：
+
+1/10(二) 下午15:00可以嗎? 創輝科技有限公司
+
+
+
 
 職缺描述
 1. 擔任核心開發者,承擔關鍵任務攻關
