update markdown resume

--- a/compony-履歷/創輝科技有限公司/01-創輝科技有限公司.md
+++ b/compony-履歷/創輝科技有限公司/01-創輝科技有限公司.md
@@ -5,10 +5,12 @@
 https://www.cakeresume.com/companies/cakeresume-Chuanghui/jobs/senior-java-software-development-engineer-a7af0c
 工作待遇： 月薪 7萬 至 15萬元
 
-
-1/10(二) 下午15:00可以嗎? 創輝科技有限公司
-
-
+面試職缺：【資深JAVA軟體開發工程師】
+面試時間：2023年1月10日 (二)  下午15:00
+面試地址：台北市內湖區堤頂大道二段409號4樓
+PS：如捷運請坐到 西湖捷運站 2號出口出來，走路約7-10分鐘即可到。
+如不克前往，請提早聯繫告知，感謝您。
+*面試流程說明 : 面談前有30分考題測驗，再進行主管口頭面試，最後由HR介紹公司福利制度。
 
 
 職缺描述
