update markdown resume

--- a/compony-履歷/自我介紹.md
+++ b/compony-履歷/自我介紹.md
@@ -36,3 +36,18 @@ SpringCloud.(9527-定是简历上第-个项目)
 
 
 
+---
+
+自我介绍示例
+1. (基本情况)面试官您好，我是XXX,就读于XXXX学院的XXXX专业，xx年毕业.我是在XX招聘网上发现贵公司招聘信息的，首
+先再次感谢您能给予我一次面试机会
+2. (项目经历)在校期间，我做过单链表通讯录、文件编程通讯录、数据库通讯录、数据库停车场、聊天室等项目.
+3. (背景)我们学院属于挂科大院，能在这样的学院坚持下来同时顺利毕业，说明对技术方面的学习是没有问题的.
+4. (任务)为了能够增加一些实战经验及更好的掌握编程知识，在校期间我也兼职做了一些项目。
+5. (行动)在做项目之前我先熟悉了一下相关的技术栈，对于不懂的问题请教了老师和同学同时完成系统的初步设计工作，
+6. (结果)最后项目也是顺利上线并应用于校图书馆，为大家在图书馆学习提供了便利，此外这个项目也让我成长了很多，不单单
+练习了wb技术更学会了如何与不同终端进行对接，更重要的是如何让老师和同学也能准确、有效的接受信息提升沟通能力.
+(未来愿景)我具备一定的组织、沟通与协调能力，而这方面能力与贵公司的岗位要求比较匹配，我相信我有能力能做好此工作，
+因此我希望贵公司能给我一个任职的机会，谢谢，
+
+
