--- a/resume/林炫羽履歷.md
+++ b/resume/林炫羽履歷.md
@@ -1,44 +1,53 @@
 <center>
     <h1>林炫羽</h1>
-    <div>          
-        <span>應徵職缺：</span>
-        <span>資深JAVA軟體開發工程師</span>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <span>工作經驗：</span>
-        <span>16 年</span>  
+    <div>
+        <span>
+            <img src="assets/graduation-cap-solid.svg" width="18px">
+            靜宜大學應用化學系碩士(1997-2000)&nbsp;&nbsp;靜宜大學應用化學系學士(1997-1993)
+        </span>
     </div>
     <div>
         <span>
             <img src="assets/phone-solid.svg" width="14px">
             0933-178-841
         </span>
-        &nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;
         <span>
             <img src="assets/mail-filled-svgrepo-com.svg" width="16px">
             yudady@gmail.com
         </span>
-        &nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;
         <span>
             <img src="assets/man-and-woman-avatar-svgrepo-com.svg" width="18px">
             男
         </span>
-        &nbsp;
-        <span>
-            <img src="assets/graduation-cap-solid.svg" width="18px">
-            靜宜大學碩士
-        </span>
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <span><img src="assets/coding-browser-svgrepo-com.svg" width="18px"></span>
+        <span>16 年</span>
     </div>
 </center>
 
+
+## <img src="assets/briefcase-solid.svg" width="30px"> 工作經歷
+
+| 在職時間         | 公司    | 職務       | 項目內容           |
+|:----------------|:--------|:---------|:---------------|
+| 2019/02~2022/12 | 優訊軟體 | 開發組長     | 三方遊戲平台與彩票系統 |
+| 2018/11~2019/02 | 聚力國際 | 資深工程師    | 體育數據整合系統       |
+| 2016/11~2018/11 | 艾米科技 | 資深工程師    | 支付聚合系統         |
+| 2013/04~2016/11 | 豐揚科技 | 高級工程師    | 電信業系統，手機庫存維修   |
+| 2011/06~2013/04 | 億力資訊 | 高級工程師    | 財政部財稅案         |
+| 2009/05~2011/06 | 緯創軟體 | 工程師      | 萬海航運(船運系統開發)   |
+| 2005/03~2009/03 | 創世紀   | 工程師      | 門戶網站           |
+
+
 ## <img src="assets/tools-solid.svg" width="30px"> 技能清單
 
-- 基礎知識：Java 17，多年一線開發經驗，具備良好的編碼能力，具備良好的麵向對象的編程思想，對並發編程，對鎖機製，線程池都有深入理解。
+- 基礎知識：多年一線開發經驗，具備良好的編碼能力，具備良好的麵向對象的編程思想，對並發編程，對鎖機製，線程池都有深入理解。
 - 框架：對Spring、SpringBoot、SpringData、MyBatis，多年實戰經驗，可以按照需求快讀構建項目，閱讀過Spring核心源碼。
 - 微服務：對Dockerfile、k8s yaml處理，有線上項目經驗。
 - 數據庫：對Mysql與Oracle有多年實戰經驗，處理索引的優化及plsql編寫有實際的開發經驗。
-- 中間件：
-  - Redis，了解底層磁盤及網絡IO模型，數據持久化機製，多數據類型緩存應用有實際的經驗。
-  - Kafka，訊息不丟和重復，消費以及消息投遞一致性問題，有實際的項目經驗。
+- 中間件：Redis，了解底層磁盤及網絡IO模型，數據持久化機製，多數據類型緩存應用有實際的經驗。Kafka，訊息不丟和重復，消費以及消息投遞一致性問題，有實際的項目經驗。
 - 熟悉大型網站高並發設計方案：對nginx、cdn、dns、https等都有深入的理解。
 - 前端技術：Angular、Vue、webpack、JQuery、Bootstrap，有實際的項目經驗。
 - GitOps：Jenkins、Maven、Gradle、ELK、GCP、Terraform、Prometheus、Grafana，有實際的項目經驗。
@@ -57,8 +66,6 @@
     - Redis、Mysql、Kafka、ElasticSearch、Kibana、core-ng(類Spring框架,https://github.com/neowu/core-ng-project)
   - 模塊：vander（廠商資訊，白名單，api回調網址），充值提現（廠商提交過來的充值提現資訊），審核員操作功能
   - 項目描述：
-    - 撰寫後台管理系統，參與產品架構設計、開發、維護、除錯處理
-    - 網站的前後端及相關API 開發與串接
     - 以API模式接入vander提交的資料，進行集團內部支付匹配
     - 首先需要有提現用戶發起固定金額提現(100 200 300 ..)，把提現金額存入提現池，當另外一個用戶發起充值，從提現池找出可用金額返回給用戶選擇金額
     - 充值用戶先選擇充值金額（提現池裡面的金額），選定金額後返回提現用戶的銀行卡資訊，當用戶充值完成後，需要上傳充值截圖，審核員確認資料無誤後執行回調API，即充值提現完成
@@ -98,17 +105,4 @@
 
 - 通用聚合支付平台，提供已串接完成的第3方支付系統，與自動上分系統，部屬在GCP上的平台，供客戶開箱即用
 - 使用技術：vue、jquery、bootstrap、websocket / redis、oracle、jsoup、elk / zabbix、jenkins
-
-## <img src="assets/briefcase-solid.svg" width="30px"> 工作經歷
-
-| 在職時間         | 公司    | 職務       | 項目內容           |
-|:----------------|:--------|:---------|:---------------|
-| 2019/02~2022/12 | 優訊軟體 | 開發組長     | 三方遊戲平台與彩票系統 |
-| 2018/11~2019/02 | 聚力國際 | 資深工程師    | 體育數據整合系統       |
-| 2016/11~2018/11 | 艾米科技 | 資深工程師    | 支付聚合系統         |
-| 2013/04~2016/11 | 豐揚科技 | 高級工程師    | 電信業系統，手機庫存維修   |
-| 2011/06~2013/04 | 億力資訊 | 高級工程師    | 財政部財稅案         |
-| 2009/05~2011/06 | 緯創軟體 | 工程師      | 萬海航運(船運系統開發)   |
-| 2005/03~2009/03 | 創世紀   | 工程師      | 門戶網站           |
-
 
