--- a/compony-履歷/自我介紹.md
+++ b/compony-履歷/自我介紹.md
@@ -50,4 +50,11 @@ SpringCloud.(9527-定是简历上第-个项目)
 (未来愿景)我具备一定的组织、沟通与协调能力，而这方面能力与贵公司的岗位要求比较匹配，我相信我有能力能做好此工作，
 因此我希望贵公司能给我一个任职的机会，谢谢，
 
+---
+https://ithelp.ithome.com.tw/m/articles/10265828
 
+全端網站的實務經驗：任職期間完成 7 個百萬級別、1 個千萬級別專案；擅長分析系統操作流程、資料庫規劃；熟悉 GIS、IPC 產業知識。
+具備優秀的溝通能力：能有效統整客戶提出的需求，在了解對方面臨的痛點後，經過協商給予合適的解決方案。
+對系統品質的要求：遵循 Git Flow 進行開發，並在 CI/CD 的 Stage 中加入 Unit Test 確保功能穩定性。
+善用專案管理工具：使用 Jira、Confluence 與團隊溝通，藉此追蹤工作進度並維持專案品質。
+自主學習：在空閒時研究能幫助或娛樂朋友的 Side Project，並保持撰寫技術文章與吸收新知的習慣。
