--- a/compony-履歷/自我介紹.md
+++ b/compony-履歷/自我介紹.md
@@ -58,3 +58,8 @@ https://ithelp.ithome.com.tw/m/articles/10265828
 對系統品質的要求：遵循 Git Flow 進行開發，並在 CI/CD 的 Stage 中加入 Unit Test 確保功能穩定性。
 善用專案管理工具：使用 Jira、Confluence 與團隊溝通，藉此追蹤工作進度並維持專案品質。
 自主學習：在空閒時研究能幫助或娛樂朋友的 Side Project，並保持撰寫技術文章與吸收新知的習慣。
+
+
+https://www.1111.com.tw/1000w/fanshome/discussTopic.asp?cat=FANS&id=236804
+- 只要提及自己是什麼學校及科系，最多可加上特殊表現或獎項即可。
+- 簡單說明前一份工作是做什麼的、隸屬哪個部門、職稱是什麼，主要負責工作有哪些、具體成績及相關成就等等
