--- a/compony-履歷/自我推薦信.md
+++ b/compony-履歷/自我推薦信.md
@@ -49,11 +49,11 @@
 
 【自我推薦信範例-完整版】
 
-我是林炫羽(tommy)，最近在優訊軟體擔任開發組長。
+我是林炫羽(tommy)，最近在優訊軟體擔任java開發組長。
 
 多年一線開發人員，對遊戲產業有一定的瞭解，
 
-我對貴公司正在招募的「資深JAVA軟體開發工程師」工作內容相當有興趣，希望能有機會面試，更了解貴公司！
+我對貴公司正在招募的「JAVA高級研發工程師」工作內容相當有興趣，希望能有機會面試，更了解貴公司！
 
 我對貴公司正在招募的「資深JAVA軟體開發工程師」工作內容，具有實際生產經驗與開發技能，希望能有機會面試，謝謝！
 
