--- a/compony-履歷/自我推薦信.md
+++ b/compony-履歷/自我推薦信.md
@@ -53,9 +53,8 @@
 
 多年一線開發人員，對遊戲產業有一定的瞭解，
 
-我對貴公司正在招募的「JAVA高級研發工程師」工作內容相當有興趣，希望能有機會面試，更了解貴公司！
+我對貴公司正在招募的「JAVA高級開發工程師」工作內容相當有興趣，希望能有機會面試，更了解貴公司！
 
-我對貴公司正在招募的「資深JAVA軟體開發工程師」工作內容，具有實際生產經驗與開發技能，希望能有機會面試，謝謝！
 
 
 ---
