--- a/compony-履歷/01-30/銘凡科技有限公司.md
+++ b/compony-履歷/01-30/銘凡科技有限公司.md
@@ -2,19 +2,9 @@ https://www.104.com.tw/job/7mfm4?jobsource=my104_re_match
 
 
 [銘凡科技有限公司](https://www.104.com.tw/job/7mfm4?jobsource=my104_re_match) 年薪1,000,000~1,600,000元
-工作職責：
-1.負責java項目模塊的程序設計、編碼
-2.根據主管的安排，完成相關遊戲功能開發
-3.參與公司通用技術框架的調研、規劃、設計和研發工作
-4.參與通用產品文檔的技術文檔編寫和沈澱
 
-任職要求：
-1.大學以上學歷，3年以上開發經驗。
-2.參與過1個以上中大型項目,熟練AOP分析和設計的能力,有豐富的多層架構體系開發經驗,有分布式、高並發、高負載、高可用性系統開發經驗。
-3.熟練Spring常用框架：Spring Boot/Spring Cloud/Spring Framework/ Spring Data...等
-4.熟練MySQL等關系數據庫開發及效能調校。
-5.熟練消息隊列(KafkaMQ)、分布式緩存(Redis)
-6.具備較強的抗壓能力和良好的溝通技巧，優秀的團隊合作精神以及較強的執行能力，善於學習和挖掘新技術
+主要商品 / 服務項目
+遊戲發行、电子商务平台、經營管理、服務、銷售。
 
 
 工作內容
@@ -40,3 +30,24 @@ https://www.104.com.tw/job/7mfm4?jobsource=my104_re_match
 應徵成功！
 已投遞履歷至 JAVA高級開發工程師
 本職務設定2個工作天回覆
+
+---
+## [[工作 - 公司通知 - 104會員中心]] [工作 - 公司通知 - 104會員中心](https://pda.104.com.tw/work/message/chat/7mfm4)
+台北市中山區南京東路三段219號9樓
+
+
+銘凡科技有限公司
+JAVA高級開發工程師
+1/31
+本公司目前正在招募【JAVA高級開發工程師】人才，
+透過104人力銀行看到您的資料，並對您的資歷很有興趣，
+先將我們的求才資料Email給您參考。
+若您對我們的工作機會有興趣，歡迎與我們聯絡。謝謝您!
+聯絡窗口：
+王小姐
+聯絡電話：
+02-77563904轉888
+
+系統提醒：
+回覆邀請意願後，系統將會自動代發訊息，讓企業知道您的意願。若需補充更多說明，可傳訊息給企業 :)
+[系統代發] 您好，我有興趣了解貴公司職缺細節，謝謝。
