--- a/compony-履歷/02-03/伊歐網路科技有限公司.md
+++ b/compony-履歷/02-03/伊歐網路科技有限公司.md
@@ -30,6 +30,10 @@ Java Backend Engineer ( Java後端工程師 )
 
 
 
+您好，
+感謝您投遞Java Backend Engineer ( Java後端工程師 )，然因職缺名額有限，經綜合評估，無法借重您的長才，未來若有缺額而您仍有興趣，歡迎再次投遞表示意願。謝謝！
+祝您求職順利！
+
 
 
 
