--- a/resume/林炫羽履歷.md
+++ b/resume/林炫羽履歷.md
@@ -31,7 +31,7 @@
 
 | 在職時間            | 公司   | 職務    | 項目內容         |
 |:----------------|:-----|:------|:-------------|
-| 2023/02~        | 葛拉墨  | 資深工程師 | 三方遊戲平台       |
+| 2023/02~至今      | 葛拉墨  | 資深工程師 | 三方遊戲平台       |
 | 2019/02~2022/12 | 優訊軟體 | 開發組長  | 三方遊戲平台與彩票系統  |
 | 2018/11~2019/02 | 聚力國際 | 資深工程師 | 體育數據整合系統     |
 | 2016/11~2018/11 | 艾米科技 | 資深工程師 | 支付聚合系統       |
@@ -45,13 +45,28 @@
 - 基礎知識：多年一線開發經驗，具備良好的編碼能力，具備良好的麵向對象的編程思想，對並發編程，對鎖機製，線程池都有深入理解。
 - 框架：對Spring、SpringBoot、SpringData、MyBatis，多年實戰經驗，可以按照需求快讀構建項目，閱讀過Spring核心源碼。
 - 微服務：對Dockerfile、k8s yaml處理，有線上項目經驗。
-- 數據庫：對Mysql與Oracle有多年實戰經驗，處理索引的優化及plsql編寫有實際的開發經驗。
-- 中間件：Redis，了解底層磁盤及網絡IO模型，數據持久化機製，多數據類型緩存應用有實際的經驗。Kafka，訊息不丟和重復，消費以及消息投遞一致性問題，有實際的項目經驗。
+- 數據庫：對Mysqlg、postgresqlg、Oracle有多年實戰經驗，處理索引的優化及plsql編寫有實際的開發經驗。
+- 中間件：Redis，了解底層磁盤及網絡IO模型，數據持久化機製，多數據類型緩存應用有實際的經驗。Kafka、rabbitmq，訊息不丟和重復，消費以及消息投遞一致性問題，有實際的項目經驗。
 - 熟悉大型網站高並發設計方案：對nginx、cdn、dns、https等都有深入的理解。
 - 前端技術：Angular、Vue、webpack、JQuery、Bootstrap，有實際的項目經驗。
 - GitOps：Jenkins、Maven、Gradle、ELK、GCP、Terraform、Prometheus、Grafana，有實際的項目經驗。
 
 ## <img src="assets/project-diagram-solid.svg" width="30px"> 項目經歷
+
+### 葛拉墨
+
+* **項目描述**：
+    - 整合三方遊戲，提供客戶與代理分成系統
+
+* **項目架構**：
+    - 技術：
+        - Redis、mongoDB、postgresql 、rabbitmq、ElasticSearch、Kibana
+    - 項目描述：
+        - 串接三方遊戲平台模組
+        - 充值提現商戶模組
+        - 客戶與代理模組
+        - 活動模組
+        - 訊息模組
 
 ### 優訊軟體：支付匹配系統（ubPay項目）
 
